# reed

./: .gitignore  Cargo.toml  design.md  design_mapping.md  libceed_alignment_assessment.md  readme.md
benches/: backend_compare.rs  cpu_backend.rs  wgpu_backend.rs
crates/core/: Cargo.toml
crates/core/src/: basis.rs  csr.rs  elem_restriction.rs  enums.rs  error.rs  lib.rs  matrix.rs  operator.rs  qfunction.rs  qfunction_context.rs  reed.rs  scalar.rs  types.rs  vector.rs
crates/cpu/: Cargo.toml
crates/cpu/src/: assembly_dense.rs  basis_lagrange.rs  basis_simplex.rs  composite_operator.rs  elem_restriction.rs  fdm_inverse.rs  lib.rs  operator.rs  simplex_p3_data.rs  vector.rs
crates/cpu/src/gallery/: ceed_gallery.rs  helpers.rs  mass.rs  mod.rs  poisson.rs  vec_dot.rs
crates/wasm-runner/: Cargo.toml
crates/wasm-runner/src/: lib.rs
crates/wgpu/: Cargo.toml
crates/wgpu/src/: basis.rs  basis_simplex.rs  elem_restriction.rs  lib.rs  qfunction_device.rs  runtime.rs  vector.rs
demo/: Cargo.toml  Trunk.toml  index.html
demo/public/wasm/: reed_wasm_runner.js  reed_wasm_runner_bg.wasm
demo/public/worker/: runnerWorker.js
demo/src/: app.rs  main.rs  style.css  types.rs
examples/: composite_operator.rs  composite_operator_refs.rs  ex1_volume.rs  ex1_volume_at_points.rs  ex2_surface.rs  ex3_volume_combined.rs  mass_operator.rs  poisson.rs  poisson_1d.rs  poisson_at_points.rs  vector_mass_operator.rs
scripts/: bench_cpu_compare.sh
src/: lib.rs
tests/: integration.rs
web/: package-lock.json  package.json
web/src/: App.vue  types.ts
web/src/workers/: runnerWorker.ts
