[package]
name = "reed"
version = "0.1.0"
edition = "2021"
description = "Rust Efficient Extensible Discretization"

[workspace]
members = [
    "crates/reed-core",
    "crates/reed-cpu",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
num-traits = "0.2"
rayon = "1"

[dependencies]
reed-core = { path = "crates/core" }
reed-cpu = { path = "crates/cpu", default-features = false }

[features]
default = ["parallel"]
parallel = ["reed-cpu/parallel"]
