[package]
name = "reed"
version = "0.1.0"
edition = "2021"
description = "Rust Efficient Extensible Discretization"

[workspace]
members = [
    "crates/core",
    "crates/cpu",
    "crates/wasm-runner",
    "crates/wgpu",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2"
num-traits = "0.2"
rayon = "1"

[dependencies]
reed-core = { path = "crates/core" }
reed-cpu = { path = "crates/cpu", default-features = false }
reed-wgpu = { path = "crates/wgpu", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["parallel"]
parallel = ["reed-cpu/parallel"]
wgpu-backend = ["dep:reed-wgpu"]
hypre-rs = []
petsc-rs = []
mumps = []
mkl = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[[bench]]
name = "cpu_backend"
harness = false

[[bench]]
name = "wgpu_backend"
harness = false

[[bench]]
name = "backend_compare"
harness = false
