[package]
name = "reed-demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Worker",
    "MessageEvent",
    "Window",
    "HtmlSelectElement",
    "HtmlInputElement",
    "Event",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = "0.11"
