[package]
name = "reed-wasm-runner"
version = "0.1.0"
edition = "2021"
description = "WASM runner for Reed examples"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reed = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
