[package]
name = "reed-wasm-runner"
version = "0.1.0"
edition = "2021"
description = "WASM runner for Reed examples"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm-gpu = ["dep:reed-wgpu", "dep:wasm-bindgen-futures"]

[dependencies]
reed = { path = "../.." }
reed-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.reed-wgpu]
path = "../wgpu"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true
